# Files-Parsing

./: .gitignore  Dockerfile  README.md  app.py  main1.py  pyproject.toml  requirements.txt
Outputs/: excel_output  output-1.txt  pdf-output  word_output
benchmarks/: benchmark_parsing.py
optional/: stage_1_parse.py  stage_2_databricks.py
stage_1_parsing/: __init__.py  excel_parser.py  gui_parser.py  pdf_parser.py  process_files.py  word_parser.py
stage_2_databricks/: __init__.py  databricks_uploader.py  db_utils.py  gui_databricks.py  test_connect.py
templates/: base.html  db_table_preview.html  db_tables.html  error.html  index.html  results.html
