[project]
name = "files-parsing"
version = "0.1.0"
description = "This project parses PDF, Word, and Excel files, organizes their content using pandas, and uploads the structured data to Databricks through PySpark for further analysis. It can also save a local backup of the parsed output in an outputs/ folder. The integration with DBeaver allows you to visually explore and query the Databricks tables using SQL without coding. This setup provides an end-to-end solution — from document parsing to database visualization — making it ideal for building searchable or analytical document repositories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core libraries for file parsing
PyMuPDF==1.24.9          
python-docx==1.1.2       
pandas==2.2.3            
openpyxl==3.1.5          

# Databricks integration
pyspark==3.5.3           
databricks-connect==15.0.3  

# Additional utilities
pyarrow==17.0.0

#python
python==3.12.1

#for gui
tk==0.1.0
]
